багфиксы + добавление функционала (задание 2)